@@ -1,13 +1,13 @@
-c240cdcc888d401fa673847d36eeb7b2 *DESCRIPTION
+e59b7028f775ec57a4ec72f3da23ca31 *DESCRIPTION
 829cfe9a18debd8b2adddcdc564767fc *NAMESPACE
-1467dee4d1efe88eb88330526e3fd2e1 *NEWS
+da116e32bb6d69c5ea48b60e18b793d7 *NEWS
 3d8c07d39120556283ec12576f186959 *R/F1.R
-b4859c984c163c02775ddc0881e271bc *R/Kfactor.R
+ca7c94d527256ab975be7666ba17c0dd *R/Kfactor.R
 df578f20194abc49270f40c50fdc723b *R/Ktable.R
 3b8df74bbcec553f234b066d5673f508 *R/accsamp.R
 7cb141b6e06cc6297774ac5bbd015a3c *R/anovatol.R
 e75275145e8c56db2a9ac737e186cf3c *R/bintolint.R
-cecda5ae8387ab088f0bc2318bfcae5a *R/bonftolint.R
+56bb41b682775262e5707f0066e6feb1 *R/bonftolint.R
 e17b7fd7f14af6365b7749c0a48d31ae *R/cautolint.R
 90cac9e41db12da64f962ddeb0ca3202 *R/diffnormtolint.R
 e9e05df30f1ca86200031b2623d99c10 *R/diffprop.R
@@ -26,9 +26,9 @@ c9931323c487fad596165fbba59d6b43 *R/hypertolint.R
 a2cc13ef2b7c90d91f264a0d1912aaa9 *R/mvregtolregion.R
 73f956b91c2a5e63a2d3dc43f5a21dd8 *R/mvtolregion.R
 8c3ec85a13a7dd587f57f63694b6acfb *R/negbintolint.R
-cd9f4273bf9eda753bc7007e2549b41b *R/neghyper.R
+71aba79bd79e3b8a8d2e1ebfacc777e8 *R/neghyper.R
 393fd9fbbe216f13593f0742ea529285 *R/neghypertolint.R
-c620c8839d33d945d607bce94fced35d *R/nonlinregtolint.R
+134776e875cad8c95f0cac8b4528ac04 *R/nonlinregtolint.R
 ad12cbb13106ff8ebd7b15704176b262 *R/nonparregtolint.R
 78020f5db6b1f47ce070be426ca4e077 *R/nonpartolint.R
 60807f6c2bed7331e96d009519f1b1ee *R/normtolint.R
@@ -48,44 +48,44 @@ deb9c4f34270461a88e9a73cf7618e23 *R/zipftolint.R
 1ca485f43ee4537b32d2d308d613e044 *inst/CITATION
 86178ccc2e978a7e1260aed12c181f26 *man/2ParExponential.Rd
 36b77c51e89a5e75e1341e8d383c7930 *man/F1.Rd
-43b7f47d8f62c723d62942856ce87ccb *man/Kfactor.Rd
+3118fa145bd876c074f060405ae36583 *man/Kfactor.Rd
 50beb3674535f3fe7df1e159f812cc9a *man/Ktable.Rd
-0f5faa9516ec981ae9553a70d517dcab *man/NegHypergeometric.Rd
+c144d3203900f749c161e8110fed031b *man/NegHypergeometric.Rd
 da77b62496d7a6c4246b791b8484122c *man/accsamp.Rd
 5c245d5e832d78dc0e8307b81cda5d00 *man/anovatolint.Rd
 5cad639de087f0817062b5b23245447d *man/bintolint.Rd
 34ae67c431d71e70cf7cd9b8d43874a3 *man/bonftolint.Rd
 74c59ebc91431379864223c1b6f710c4 *man/cautolint.Rd
 3d05934e9665e2be2b3ecedf95491528 *man/diffnormtolint.Rd
-a8c33b9207aaf60d3e8c4b080f2228d5 *man/diffprop.Rd
+e0687756c3eb1cbb396ed8ab6935253d *man/diffprop.Rd
 940f5efaf85fbda06133c4f1729356c6 *man/distfreeest.Rd
 8abc537b9f0e53a54bd0217d36c23c05 *man/exp2tolint.Rd
 146c05da686d34863e23ec237d3faaad *man/exptolint.Rd
 558cfe6e2bb1ae28d2eae44f20fd1eed *man/exttolint.Rd
-95c1ba37aa519f7b37c8424ea64e1f07 *man/fidbintolint.Rd
-715979baf55171e81ecffe0834b91988 *man/fidnegbintolint.Rd
-79a550bcbcaa7a823bf4b978150989f6 *man/fidpoistolint.Rd
+27ab887c81f4d29dbc6b136d127ccc0a *man/fidbintolint.Rd
+ec0a7760d94dae24c1bd6e8323496de6 *man/fidnegbintolint.Rd
+e1c4b689ee25c71e41f57e2143b4903c *man/fidpoistolint.Rd
 e8481efb8541ce812cbcdfd7b448ce18 *man/gammatolint.Rd
 2ac2b8b0347b0b4bf6e394f018a30717 *man/hypertolint.Rd
 fac54446674cb95748f3f3cb2ba762a9 *man/laptolint.Rd
 0bfc2f085549f9184edec8c889260948 *man/logistolint.Rd
 299e05fefa76a863dcfce4fe46bc5c77 *man/mvregtolregion.Rd
 4b25a128e34777724642841dd19e6094 *man/mvtolregion.Rd
-831746b76187129fd8248ce7050877b5 *man/negbintolint.Rd
+2efd7bdf4343d3786862d59d231396a0 *man/negbintolint.Rd
 9d190cb527b184305425abbf6fdb90a9 *man/neghypertolint.Rd
-266d5059adc94ba3cd99c1735329f6fd *man/nonlinregtolint.Rd
-09a4659dfb50b33b3ccdd29866d63429 *man/nonparregtolint.Rd
+4ead645875168a339db0c634f91a2ad6 *man/nonlinregtolint.Rd
+2f178c5bf50d877d77e442430b398ded *man/nonparregtolint.Rd
 40b14162e09b813d43e328698582e55d *man/nonpartolint.Rd
 d423065995f3e8bf5b8985173f2fe129 *man/normtolint.Rd
 a3df8b9cbf916b17fd06a6abd79dfc62 *man/nporder.Rd
 4e5486c42f7e087ab76169da0cc8a161 *man/paretotolint.Rd
 6883c2b760d181ebea2555026f6d6f77 *man/plottol.Rd
 2fe746bc3cd6446cdf9233d2bcf84276 *man/poistolint.Rd
-f24fd1142c19704403087500d4a944b6 *man/regtolint.Rd
+4608a926925e73f94ba97165a39127e9 *man/regtolint.Rd
 278341a12104538199fb98664120caa3 *man/tolerance-internal.Rd
-288774470c61a5b1b5f6a71d13d34dd6 *man/tolerance.package.Rd
+59a8215f238e9d03a0b793b3fc9c974e *man/tolerance.package.Rd
 f20e2281d5b4fc3bdf8afe5e558ef7e7 *man/umatolint.Rd
 37d1049f6536d76b55ba6d7a9b51ce2c *man/uniftolint.Rd
-f969ddfa89b6ffb8eb683852e2c80efa *man/zipfman.Rd
-263c8682eccf03ce771bfc0291864681 *man/zipftolint.Rd
+636d440d6ce1c86a5d418a0dca9dea23 *man/zipfman.Rd
+706ad61eec4bb9a826cb62f03bbe6bd8 *man/zipftolint.Rd
 4338f7e498ca41202e6c86cd3f5402e3 *man/zmll.Rd
